# projet_bi

./: README.md  hello.html  hello.py  index.html  pyproject.toml  requirements.txt  search.js  src.html
.github/workflows/: ci.yml
bi_project/: LICENSE  Makefile  README.md  setup.py
bi_project/docs/: Makefile  conf.py  index.rst  make.bat
src/: hello.html  hello.py
tests/: test_exemple.py
