[project]
name = "bi-intelligence-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "loguru>=0.7.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pdoc>=15.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "scikit-learn>=1.6.1",
]
